SVN_SILENT: SVN_MERGE:
Part of r1132719 merge from e35 to trunk.

Ported stuff from Qt3 to Qt4. And to KCalCore.

Only action manager remaining.

svn path=/branches/work/kdepim_kcalcore/korganizer/; revision=1158313

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,6 +223,7 @@ set(korganizerprivate_LIB_SRCS
   printing/calprinter.cpp
   printing/calprintpluginbase.cpp
   printing/calprintdefaultplugins.cpp
+  previewdialog.cpp
 )
 
 kde4_add_kcfg_files(korganizerprivate_LIB_SRCS htmlexportsettings.kcfgc )
