First stab at getting the new Event/Todo editor into korg trunk.
- Creating new events now works and shows the new editor.
- Editting existing events is currently broken.

svn path=/branches/work/kdepim_kcalcore/korganizer/; revision=1159564

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,6 +260,7 @@ target_link_libraries(korganizerprivate
   akonadi-kcal_next
   akonadi_next
   incidenceeditors
+  incidenceeditorsng
   kdgantt2
 )
 
