SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepim/; revision=1161882

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -18,6 +18,7 @@ Name[gl]=Calendario DBUS
 Name[hu]=D-Bus-naptár
 Name[it]=DBUSCalendar
 Name[ja]=D-Bus カレンダー
+Name[kk]=DBUSCalendar
 Name[km]=DBUSCalendar
 Name[ko]=DBUSCalendar
 Name[lt]=DBUSkalendorius
@@ -59,6 +60,7 @@ Comment[gl]=Organizador con interface D-Bus
 Comment[hu]=Határidőnapló D-Bus-os felülettel
 Comment[it]=Agenda con un'interfaccia D-Bus
 Comment[ja]=D-Bus インターフェースを持つカレンダー
+Comment[kk]=D-BUS интерфейсті Ұйымдастырғыш
 Comment[km]=កម្មវិធី​រៀបចំ​ជាមួយ​ចំណុច​ប្រទាក់ D-Bus
 Comment[lv]=Organizators ar D-BUS saskarni
 Comment[nb]=Organizer med D-Bus-grensesnitt
