--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -17,6 +17,7 @@ Name[gl]=Interface de decoración de calendarios
 Name[hu]=Naptármegjelenési bővítmény
 Name[it]=Interfaccia di decorazione del calendario
 Name[ja]=カレンダー装飾インターフェース
+Name[kk]=Күнтізбені безендіру интерфейсі
 Name[km]=ចំណុច​ប្រទាក់​តុបតែង​ប្រតិទិន
 Name[ko]=달력 장식 인터페이스
 Name[lt]=Kalendoriaus dekoracijų sąsaja
@@ -70,7 +71,7 @@ Comment[is]=Íforrit til að skreyta texta dagatals
 Comment[it]=Estensione di decorazione del calendario
 Comment[ja]=カレンダー装飾プラグイン
 Comment[ka]=კალენდრის გაფორმების მოდული
-Comment[kk]=Күнтізбені безендіру модулі
+Comment[kk]=Күнтізбені безендіру плагині
 Comment[km]=កម្មវិធី​ជំនួយ​សម្រាប់​តុបតែង​ប្រតិទិន
 Comment[ko]=달력 장식 플러그인
 Comment[lt]=vCalendar dekoracijų įskiepis
