--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -17,6 +17,7 @@ Name[gl]=Interface do engadido do Calendario
 Name[hu]=Naptárbővítmény-felület
 Name[it]=Interfaccia dell'estensione calendario
 Name[ja]=カレンダープラグインインターフェース
+Name[kk]=Күнтізбе плагинінің интерфейсі
 Name[km]=ប្រតិទិន​កម្មវិធី​ជំនួយ​ប្រតិទិន
 Name[ko]=달력 플러그인 인터페이스
 Name[lt]=Kalendoriaus priedo sąsaja
@@ -70,7 +71,7 @@ Comment[is]=Dagatals íforrit
 Comment[it]=Estensione calendario
 Comment[ja]=カレンダープラグイン
 Comment[ka]=კალენდრის მოდული
-Comment[kk]=Күнтізбе модулі
+Comment[kk]=Күнтізбе плагині
 Comment[km]=កម្មវិធី​ជំនួយ​ប្រតិទិន
 Comment[ko]=달력 플러그인
 Comment[lt]=iCalendar įskiepis
