--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -16,6 +16,7 @@ Name[gl]=Interface da Parte KOrganizer
 Name[hu]=KOrganizer objektumfelület
 Name[it]=Interfaccia del componente di KOrganizer
 Name[ja]=KOrganizer コンポーネントのインターフェース
+Name[kk]=KOrganizer бөлшегінің интерфейсі
 Name[km]=ចំណុច​ប្រទាក់​ផ្នែក​របស់ KOrganizer
 Name[ko]=KOrganizer 부분 인터페이스
 Name[lt]=KOrganizer dalies sąsaja
