--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -16,6 +16,7 @@ Name[gl]=Interface do Engadido de Impresión de KOrganizer
 Name[hu]=A KOrganizer nyomtatási bővítmény felülete
 Name[it]=Interfaccia dell'estensione di stampa di KOrganizer
 Name[ja]=KOrganizer 印刷プラグインインターフェース
+Name[kk]=KOrganizer-дің басып шығару плагинінің интерфейсі
 Name[km]=ចំណុច​ប្រទាក់​កម្មវិធី​ជំនួយ​​បោះពុម្ព KOrganizer
 Name[ko]=KOrganizer 인쇄 플러그인 인터페이스
 Name[lt]=KOrganizer spausdinimo priedo sąsaja
