--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -31,6 +31,7 @@ Name[gl]=Cores e tipos de letra
 Name[hu]=Színek és betűtípusok
 Name[it]=Colori e caratteri
 Name[ja]=色とフォント
+Name[kk]=Түс пен Қаріпі
 Name[km]=ពណ៌ និង​ពុម្ពអក្សរ
 Name[ko]=색과 글꼴
 Name[lt]=Spalvos ir šriftai
@@ -72,6 +73,7 @@ Comment[gl]=Configuración das cores e dos tipos de letra do KOrganizer
 Comment[hu]=KOrganizer szín- és betűtípus-beállítások
 Comment[it]=Configurazione dei colori e dei caratteri di KOrganizer
 Comment[ja]=KOrganizer 色とフォントの設定
+Comment[kk]=KOrganizer-дің түс пен қаріптер параметрлері
 Comment[km]=ការ​កំណត់​រចនាសម្ព័ន្ធ​ពុម្ពអក្សរ និង​ពណ៌ KOrganizer
 Comment[ko]=KOrganizer 색과 글꼴 설정
 Comment[lt]=KOrganizer spalvų ir šriftų konfigūravimas
