--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -41,7 +41,7 @@ Name[is]=Sérsniðnar síður
 Name[it]=Pagine personalizzate
 Name[ja]=カスタムページ
 Name[ka]=სამომხმარებლო გვერდები
-Name[kk]=Қосымша парақтар
+Name[kk]=Өзгеше парақтар
 Name[km]=ទំព័រ​ផ្ទាល់​ខ្លួន
 Name[ko]=사용자 정의 페이지
 Name[lt]=Pasirinkti puslapiai
@@ -99,7 +99,7 @@ Comment[is]=Stilla sérsniðnu síðurnar
 Comment[it]=Configura le pagine personalizzate
 Comment[ja]=カスタムページの設定
 Comment[ka]=სამომხმარებლო გვერდების კონფიგურაცია
-Comment[kk]=Қосымша парақтарды баптау
+Comment[kk]=Өзгеше парақтарын баптау
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​ទំព័រ​ផ្ទាល់​ខ្លួន
 Comment[ko]=사용자 정의 페이지 설정
 Comment[lt]=Konfigūruoti darbastalių skaičių ir pavadinimus
