--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -101,7 +101,7 @@ Comment[is]=Stillingar KOrganizer íforrita
 Comment[it]=Configurazione estensioni KOrganizer
 Comment[ja]=KOrganizer プラグインの設定
 Comment[ka]=KOrganizer მოდულების კონფიგურაცია
-Comment[kk]=KOrganizer-дің плагин модульдерінің параметрлері
+Comment[kk]=KOrganizer плагинінің параметрлері
 Comment[km]=ការ​កំណត់​រចនាសម្ព័ន្ធ​កម្មវិធី​ជំនួយ KOrganizer
 Comment[ko]=KOrganizer 플러그인 설정
 Comment[lt]=KOrganizer priedų konfigūravimas
