--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -32,6 +32,7 @@ Name[gl]=Hora e data
 Name[hu]=Dátum és idő
 Name[it]=Data e ora
 Name[ja]=日付と時間
+Name[kk]=Уақыт пен Күн
 Name[km]=កាលបរិច្ឆេទ និង​ពេលវេលា
 Name[ko]=시간과 날짜
 Name[lt]=Laikas ir data
@@ -74,6 +75,7 @@ Comment[gl]=Configuración da hora e a data do KOrganizer
 Comment[hu]=KOrganizer dátum- és időbeállítások
 Comment[it]=Configurazione data e ora di KOrganizer
 Comment[ja]=KOrganizer 日付と時間の設定
+Comment[kk]=KOrganizer-дің уақыт параметрлері
 Comment[km]=កា​រកំណត់​រចនាសម្ព័ន្ធ​កាលបរិច្ឆេទ និង​ពេលវេលា KOrganizer
 Comment[ko]=KOrganizer 시간 및 날짜 설정
 Comment[lt]=KOrganizer laiko ir datos konfigūravimas
