--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -26,7 +26,7 @@ Name[is]=Íforrit fyrir númer dags á dagatali
 Name[it]=Estensione data ordinale per i calendari
 Name[ja]=日数表示プラグイン
 Name[ka]=თარიღის რიცხვების მოდული კალენდრებისათვის
-Name[kk]=Күнтізбедегі күн нөмірінің модулі
+Name[kk]=Күнтізбедегі күн нөмірінің плагині
 Name[km]=កម្មវិធី​ជំនួយ​លេខ​កាលបរិច្ឆេទ​សម្រាប់​ប្រតិទិន
 Name[ko]=달력을 위한 날짜 숫자 플러그인
 Name[lt]=Datų numerių įskiepis kalendoriams
