--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -27,7 +27,7 @@ Name[is]=Gyðinga dagatalsíforrit
 Name[it]=Estensione calendario ebraico
 Name[ja]=ユダヤ歴プラグイン
 Name[ka]=ებრაული კალენდრის მოდული
-Name[kk]=Яһуди күнтізбесінің модулі
+Name[kk]=Яһуди күнтізбесінің плагині
 Name[km]=កម្មវិធី​ជំនួយ​ប្រតិទិន Jewish
 Name[ko]=히브리 달력 플러그인
 Name[lt]=Žydų kalendoriaus įskiepis
@@ -73,6 +73,7 @@ Comment[gl]=Amosa todas as datas en KOrganizer tamén no sistema de calendario x
 Comment[hu]=A KOrganizer dátumait kiírja a hagyományos zsidó naptár szerint is.
 Comment[it]=Mostra tutte le date in KOrganizer anche secondo il calendario ebraico.
 Comment[ja]=KOrganizer のすべての日付をユダヤ暦でも表示します。
+Comment[kk]=Яһуди күнтізбе күндерін KOrganizer-де көрсететін плагині.
 Comment[km]=បង្ហាញ​កាលបរិច្ឆេទ​ទាំងអស់​នៅ​ក្នុង KOrganizer នៅ​ក្នុង​ប្រព័ន្ធ​ប្រតិទិន Jewish ផងដែរ ​​។
 Comment[ko]=KOrganizer의 모든 날짜를 히브리 달력의 날짜로도 표시합니다.
 Comment[lt]=Rodo visas dienas KOrganizer taip pat ir žydų kalendoriaus sistema.
