--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -75,7 +75,7 @@ Comment[is]=Þetta íforrit gerir þér kleyft að prenta út dagbókarfærslur.
 Comment[it]=Questa estensione ti permette di stampare le voci del diario.
 Comment[ja]=このプラグインにより、日記のエントリを印刷できるようになります。
 Comment[ka]=ეს მოდული საშუალებას გაძლევთ ამობეჭდოთ ჟურნალის შემადგენლობა (დღიურის ელემენტები)
-Comment[kk]=Бұл күнделіктің жазуларын басып шығаратын модулі.
+Comment[kk]=Бұл күнделіктің жазуларын басып шығаратын плагині.
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ​អនុញ្ញាត​ឲ្យ​អ្នក​បោះពុម្ព​ធាតុ​ទិនានុប្បវត្តិ (ធាតុ​កំណត់ហេតុ​ប្រចាំ​ថ្ងៃ) ។
 Comment[ko]=이 플러그인은 저널 항목을 인쇄할 수 있도록 해 줍니다.
 Comment[lt]=Šis įskiepis leidžia spausdinti dienyno įrašus.
