--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -23,7 +23,7 @@ Name[gl]=Estilo de Impresión Anual
 Name[hu]=Éves naptár nyomtatási stílus
 Name[it]=Stile di stampa annuale
 Name[ja]=年単位印刷スタイル
-Name[kk]=Жылдық басу стилі
+Name[kk]=Жылдықты басу стилі
 Name[km]=រចនាប័ទ្ម​បោះពុម្ព​ប្រចាំ​ឆ្នាំ
 Name[ko]=연간 인쇄 양식
 Name[lt]=Metų spausdinimo stilius
@@ -67,7 +67,7 @@ Comment[gl]=Este engadido permite imprimir un calendario anual.
 Comment[hu]=Ez a modul egy egész éves naptár kinyomtatását teszi lehetővé.
 Comment[it]=Questa estensione ti permette di stampare un calendario annuale.
 Comment[ja]=このプラグインにより、年単位のカレンダーを印刷できるようになります。
-Comment[kk]=Бұл жылдық күнтізбені басып шығаратын модулі.
+Comment[kk]=Бұл жылдық күнтізбені басып шығаратын плагині.
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ​អនុញ្ញាត​ឲ្យ​អ្នក​បោះពុម្ព​​ប្រតិទិន​ប្រចាំ​ឆ្នាំ ។
 Comment[ko]=이 플러그인은 연간 달력을 인쇄할 수 있도록 해 줍니다.
 Comment[lt]=Šis įskiepis leidžia spausdinti metų kalendorių.
