--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -17,6 +17,7 @@ Name[gl]=Engadido "Este Dí­a na Historia" da Wikipedia
 Name[hu]=Wikipedia-bővítmény - "Történelmi események ezen a napon"
 Name[it]=Estensione "Questo giorno nella storia" di Wikipedia
 Name[ja]=Wikipedia 今日は何の日プラグイン
+Name[kk]=Wikipedia-дағы 'Бұл күн тарихта' плагині
 Name[km]=កម្មវិធី 'ថ្ងៃនេះ​ក្នុង​ប្រវត្តិ' របស់វីគីភីឌៀ
 Name[ko]=위키백과 '오늘의 역사' 플러그인
 Name[lt]=Wikipedios „Ši diena istorijoje“ įskiepis
@@ -53,6 +54,7 @@ Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Histori
 Comment[hu]=Ez a bővítmény hozzáférést biztosít a Wikipedia "Történelmi események ezen a napon" oldalához
 Comment[it]=Questa estensione fornisce la pagina "Questo giorno nella storia" di Wikipedia
 Comment[ja]=Wikipedia の「今日は何の日」へのリンクを提供します。
+Comment[kk]=Бл плагині Wikipedia-дағы 'Бұл күн тарихта' мәліметіне  қол жеткізеді
 Comment[km]=កម្មវិធី​នេះ ផ្ដល់​នូវ​តំណ​ទៅ​កាន់​ទំព័រ​នៃ​ប្រវត្តិ​ថ្ងៃ​នេះ​របស់ Wikipedia
 Comment[ko]=이 플러그인은 위키백과의 '오늘의 역사' 페이지로 가는 링크를 제공합니다
 Comment[lt]=Šis įskiepis suteikia nuorodas į Wikipedijos „Ši diena istorijoje“ puslapius
