Create own collection properties dialog, otherwise we will register this page and we will show it in all properties dialog when we use kontact => not a good idea
svn path=/trunk/KDE/kdepim/korganizer/; revision=1164586

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,7 @@ install(TARGETS korganizer_core ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 if (QT_QT3SUPPORT_FOUND)
 set(korganizerprivate_LIB_SRCS
+  kocollectionpropertiesdialog.cpp
   collectiongeneralpage.cpp
   koalternatelabel.cpp
   kodecorationlabel.cpp
