--- a/korgac/CMakeLists.txt
+++ b/korgac/CMakeLists.txt
@@ -28,7 +28,8 @@ kde4_add_app_icon(korgac_SRCS "${KDE4_ICON_DIR}/oxygen/*/apps/korgac.png")
 
 kde4_add_executable(korgac ${korgac_SRCS})
 
-target_link_libraries(korgac 
+target_link_libraries(korgac
+        calendarsupport
 	${KDE4_KDEUI_LIBS} 
 	${KDE4_PHONON_LIBS} 
 	${KDEPIMLIBS_KPIMIDENTITIES_LIBS}
