Link against eventviews
svn path=/branches/work/~smartins/korganizer/; revision=1166798

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,6 +256,7 @@ target_link_libraries(korganizerprivate
   kdepimdbusinterfaces
   korganizer_core
   calendarsupport
+  eventviews
   incidenceeditors
   incidenceeditorsng
   kdgantt2
