Remove timelabels, they are in calendarviews.
Comment multiagenda temporarily.

svn path=/branches/work/~smartins/korganizer/; revision=1167118

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(korganizer)
+Sproject(korganizer)
 
 #
 # The following macros can be defined to alter KOrganizer behavior.
@@ -161,9 +161,6 @@ set(korganizerprivate_LIB_SRCS
   koalternatelabel.cpp
   kodecorationlabel.cpp
   koeventviewerdialog.cpp
-  timelabelszone.cpp
-  timelabels.cpp
-  timescaleconfigdialog.cpp
   datenavigator.cpp
   kdatenavigator.cpp
   datenavigatorcontainer.cpp
@@ -176,7 +173,7 @@ set(korganizerprivate_LIB_SRCS
   views/monthview/monthitem.cpp
   views/monthview/monthgraphicsitems.cpp
   views/monthview/monthscene.cpp
-  views/multiagendaview/multiagendaview.cpp
+#  views/multiagendaview/multiagendaview.cpp
   views/todoview/kotodomodel.cpp
   views/todoview/kotododelegates.cpp
   views/todoview/kotodoviewsortfilterproxymodel.cpp
@@ -225,7 +222,7 @@ kde4_add_kcfg_files(korganizerprivate_LIB_SRCS htmlexportsettings.kcfgc )
 
 kde4_add_ui_files(korganizerprivate_LIB_SRCS
   accountscalendarwidget.ui
-  multiagendaviewconfigwidget.ui
+#  multiagendaviewconfigwidget.ui
   filteredit_base.ui publishdialog_base.ui kogroupwareprefspage.ui searchdialog_base.ui timescaleedit_base.ui
   printing/calprintincidenceconfig_base.ui printing/calprintdayconfig_base.ui printing/calprintmonthconfig_base.ui printing/calprinttodoconfig_base.ui printing/calprintweekconfig_base.ui
 )
