Remove CalendarDecoration from korg, and make all plugins use the one in eventviews
svn path=/branches/work/~smartins/korganizer/; revision=1168491

--- a/plugins/hebrew/CMakeLists.txt
+++ b/plugins/hebrew/CMakeLists.txt
@@ -8,7 +8,6 @@ include_directories(
 ########### next target ###############
 
 set( korg_hebrew_PART_SRCS
-     ${CMAKE_SOURCE_DIR}/korganizer/interfaces/calendar/calendardecoration.cpp
      converter.cpp
      parsha.cpp
      holiday.cpp
@@ -19,6 +18,7 @@ set( korg_hebrew_PART_SRCS
 kde4_add_plugin( korg_hebrew ${korg_hebrew_PART_SRCS} )
 
 target_link_libraries( korg_hebrew
+                       eventviews
                        ${KDE4_KDECORE_LIBS}
                        ${KDE4_KDEUI_LIBS}
                        korganizerprivate )
