--- a/plugins/picoftheday/CMakeLists.txt
+++ b/plugins/picoftheday/CMakeLists.txt
@@ -8,7 +8,6 @@ include_directories(
 ########### next target ###############
 
 set( korg_picoftheday_PART_SRCS
-     ${CMAKE_SOURCE_DIR}/korganizer/interfaces/calendar/calendardecoration.cpp
      configdialog.cpp
      picoftheday.cpp
    )
@@ -21,7 +20,8 @@ kde4_add_plugin( korg_picoftheday ${korg_picoftheday_PART_SRCS} )
 target_link_libraries( korg_picoftheday
                        ${KDE4_KIO_LIBS}
                        ${KDE4_KDEUI_LIBS}
-                       korganizerprivate )
+                       korganizerprivate
+                       eventviews )
 
 install( TARGETS korg_picoftheday
          DESTINATION ${PLUGIN_INSTALL_DIR} )
