--- a/plugins/thisdayinhistory/CMakeLists.txt
+++ b/plugins/thisdayinhistory/CMakeLists.txt
@@ -8,7 +8,6 @@ include_directories(
 ########### next target ###############
 
 set( korg_thisdayinhistory_PART_SRCS
-     ${CMAKE_SOURCE_DIR}/korganizer/interfaces/calendar/calendardecoration.cpp
      thisdayinhistory.cpp
    )
 
@@ -20,7 +19,8 @@ kde4_add_plugin( korg_thisdayinhistory ${korg_thisdayinhistory_PART_SRCS} )
 target_link_libraries( korg_thisdayinhistory
                        ${KDE4_KDECORE_LIBS}
                        ${KDE4_KDEUI_LIBS}
-                       korganizerprivate )
+                       korganizerprivate
+                       eventviews )
 
 install( TARGETS korg_thisdayinhistory
          DESTINATION ${PLUGIN_INSTALL_DIR} )
