--- a/plugins/datenums/CMakeLists.txt
+++ b/plugins/datenums/CMakeLists.txt
@@ -8,7 +8,6 @@ include_directories(
 ########### next target ###############
 
 set( korg_datenums_PART_SRCS
-     ${CMAKE_SOURCE_DIR}/korganizer/interfaces/calendar/calendardecoration.cpp
      configdialog.cpp
      datenums.cpp
    )
@@ -16,6 +15,7 @@ set( korg_datenums_PART_SRCS
 kde4_add_plugin( korg_datenums ${korg_datenums_PART_SRCS} )
 
 target_link_libraries( korg_datenums
+                       eventviews
                        ${KDE4_KDECORE_LIBS}
                        ${KDE4_KDEUI_LIBS}
                        korganizerprivate )
