Get rid of the deprecated CollectionSelectionProxyModel from CalendarSupport. It wasn't as easy as replacing it by KCheckableProxyModel though. The CollectionSelectionProxyModel also did sorting and filtering. Therefore the uses of the removed model got replaced by the following chain:
${SourceModel}             | The original source model
QSortFilterProxyModel      | Sorts the model by name
KColumnFilterProxyModel    | Makes sure that only the first column is shown
KCheckableFilterProxyModel | Makes the visible column(s) checkable

svn path=/trunk/KDE/kdepim/calendarsupport/; revision=1174843

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -231,6 +231,7 @@ target_link_libraries(korganizerprivate
   ${KDEPIMLIBS_MAILTRANSPORT_LIBS}
   ${KDEPIMLIBS_KCALCORE_LIBS}
   ${KDEPIMLIBS_KCALUTILS_LIBS}
+  akonadi_next
   kdepim
   korganizer_interfaces
   kdepimdbusinterfaces
