--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -19,7 +19,7 @@ Name[gl]=Engadido para a Imaxe do Dí­a da Wikipedia nos Calendarios
 Name[hu]=Naptárbővítmény a Wikipedia "A nap képe" funkciójához
 Name[it]=Estensione "foto del giorno" di Wikipedia per i calendari
 Name[ja]=Wikipedia 今日の写真プラグイン
-Name[kk]=Күнтізбенің Wikipedia-дағы күнделікті сурет плагині
+Name[kk]=Күнтізбенің Уикипедиядағы "Тәулік суреті" плагині
 Name[km]=រូបភាព​របស់ Wikipedia នៃ​​កម្មវិធី​ជំនួយ​ថ្ងៃ​សម្រាប់​ប្រតិទិន
 Name[ko]=달력을 위한 위키백과 오늘의 그림 플러그인
 Name[lt]=Wikipedijos dienos nuotraukų įskiepis kalendoriams
@@ -58,7 +58,7 @@ Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
 Comment[hu]=Ez a bővítmény kezelni tudja a Wikipedia "A nap képe" szolgáltatását
 Comment[it]=Questa estensione fornisce la "foto del giorno" di Wikipedia
 Comment[ja]=Wikipedia の「今日の写真」を提供します。
-Comment[kk]=Бұл плагині Wikipedia-дағы күнделік суретін алып береді
+Comment[kk]=Бұл плагині Уикипедиядағы "Тәулік суреті" дегенді алып береді
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
 Comment[ko]=위키백과 오늘의 그림을 표시합니다
 Comment[lt]=Šis įskiepis pateikia Wikipedijos dienos nuotrauką
