--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -39,6 +39,7 @@ Name[ga]=Ginearálta
 Name[gl]=Xeral
 Name[he]=כללי
 Name[hu]=Általános
+Name[ia]=General
 Name[is]=Almennt
 Name[it]=Generale
 Name[ja]=全般
