SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=1197736

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -16,6 +16,7 @@ Name[fr]=DBUSCalendar
 Name[ga]=Féilire DBUS
 Name[gl]=Calendario DBUS
 Name[hu]=D-Bus-naptár
+Name[ia]=Calendario DBUS
 Name[it]=DBUSCalendar
 Name[ja]=D-Bus カレンダー
 Name[kk]=DBUSCalendar
@@ -58,6 +59,7 @@ Comment[fr]=Agenda avec une interface D-Bus
 Comment[ga]=Eagraí a bhfuil comhéadan D-Bus aige
 Comment[gl]=Organizador con interface D-Bus
 Comment[hu]=Határidőnapló D-Bus-os felülettel
+Comment[ia]=Organisator con un interfacie de D-Bus
 Comment[it]=Agenda con un'interfaccia D-Bus
 Comment[ja]=D-Bus インターフェースを持つカレンダー
 Comment[kk]=D-BUS интерфейсті Ұйымдастырғыш
