--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -14,6 +14,7 @@ Name[fr]=Interface de module d'impression d'agenda
 Name[ga]=Comhéadan Breiseáin Priontála KOrganizer
 Name[gl]=Interface do Engadido de Impresión de KOrganizer
 Name[hu]=A KOrganizer nyomtatási bővítmény felülete
+Name[ia]=Interfacie de plug-in pro imprimer in KOrganizer
 Name[it]=Interfaccia dell'estensione di stampa di KOrganizer
 Name[ja]=KOrganizer 印刷プラグインインターフェース
 Name[kk]=KOrganizer-дің басып шығару плагинінің интерфейсі
@@ -65,6 +66,7 @@ Comment[gl]=Parte KOrganizer
 Comment[he]=רכיב KOrganizer
 Comment[hr]=KOrganizer komponenta
 Comment[hu]=KOrganizer objektum
+Comment[ia]=Parte pro KOrganizer
 Comment[is]=KOrganizer hluti
 Comment[it]=Componente di KOrganizer
 Comment[ja]=KOrganizer コンポーネント
