--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -29,6 +29,7 @@ Name[fr]=Couleurs et polices
 Name[ga]=Dathanna agus Clónna
 Name[gl]=Cores e tipos de letra
 Name[hu]=Színek és betűtípusok
+Name[ia]=Colores e fontes
 Name[it]=Colori e caratteri
 Name[ja]=色とフォント
 Name[kk]=Түс пен Қаріпі
@@ -71,6 +72,7 @@ Comment[fr]=Configuration des couleurs et des polices de KOrganizer
 Comment[ga]=Cumraíocht na nDathanna/gClónna le haghaidh KOrganizer
 Comment[gl]=Configuración das cores e dos tipos de letra do KOrganizer
 Comment[hu]=KOrganizer szín- és betűtípus-beállítások
+Comment[ia]=Configuration de colores e fontes in KOrganizer
 Comment[it]=Configurazione dei colori e dei caratteri di KOrganizer
 Comment[ja]=KOrganizer 色とフォントの設定
 Comment[kk]=KOrganizer-дің түс пен қаріптер параметрлері
