--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -37,6 +37,7 @@ Name[ga]=Leathanaigh Shaincheaptha
 Name[gl]=Páxinas personalizadas
 Name[he]=דפים מותאמים אישית
 Name[hu]=Egyéni lapok
+Name[ia]=Paginas personalisate
 Name[is]=Sérsniðnar síður
 Name[it]=Pagine personalizzate
 Name[ja]=カスタムページ
@@ -95,6 +96,7 @@ Comment[ga]=Cumraigh na Leathanaigh Shaincheaptha
 Comment[gl]=Configurar as páxinas personalizadas
 Comment[he]=הגדר את הדפים המותאמים אישית
 Comment[hu]=Az egyéni lapok beállítása
+Comment[ia]=Configura le paginas personalisate
 Comment[is]=Stilla sérsniðnu síðurnar
 Comment[it]=Configura le pagine personalizzate
 Comment[ja]=カスタムページの設定
