--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -36,6 +36,7 @@ Name[fy]=Frij/beset
 Name[ga]=Saor/Gafa
 Name[gl]=Ceibe/Ocupado
 Name[hu]=Foglaltság
+Name[ia]=Libere/Occupate
 Name[is]=Tímaráðstöfun
 Name[it]=Libero/Occupato
 Name[ja]=フリー/ビジー
@@ -95,6 +96,7 @@ Comment[fy]=KOrganizer frij/beset ynstelle
 Comment[ga]=Cumraíocht Saor/Gafa KOrganizer
 Comment[gl]=Configuración de dispoñibilidade de Korganizer
 Comment[hu]=KOrganizer foglaltsági beállítások
+Comment[ia]=Configuration KOrganizer de Libere/Occupate
 Comment[is]=KOrganizer stillingar fyrir tímaráðstöfun
 Comment[it]=Configurazione Libero/Occupato di KOrganizer
 Comment[ja]=KOrganizer フリー/ビジーの設定
