--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -102,6 +102,7 @@ Comment[ga]=Príomhchumraíocht KOrganizer
 Comment[gl]=Configuración principal do KOrganizer
 Comment[he]=תצורה ראשית של הארגונית
 Comment[hu]=A KOrganizer alapbeállításai
+Comment[ia]=Configuration principal de KOrganizer
 Comment[is]=Aðalstillingar KOrganizer
 Comment[it]=Configurazione principale di KOrganizer
 Comment[ja]=KOrganizer 全般設定
