--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -38,6 +38,7 @@ Name[ga]=Breiseáin
 Name[gl]=Engadidos
 Name[he]=תוספים
 Name[hu]=Bővítőmodulok
+Name[ia]=Plug-ins
 Name[is]=Íforrit
 Name[it]=Estensioni
 Name[ja]=プラグイン
@@ -98,6 +99,7 @@ Comment[ga]=Cumraíocht Breiseán KOrganizer
 Comment[gl]=Configuración dos engadidos do KOrganizer
 Comment[he]=הגדרות תוסף הארגונית
 Comment[hu]=A KOrganizer bővítőmodul beállításai
+Comment[ia]=Configuration de plug-ins in KOrganizer
 Comment[is]=Stillingar KOrganizer íforrita
 Comment[it]=Configurazione estensioni KOrganizer
 Comment[ja]=KOrganizer プラグインの設定
