--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -30,6 +30,7 @@ Name[fr]=Date et heure
 Name[ga]=Am agus Dáta
 Name[gl]=Hora e data
 Name[hu]=Dátum és idő
+Name[ia]=Hora e data
 Name[it]=Data e ora
 Name[ja]=日付と時間
 Name[kk]=Уақыт пен Күн
@@ -74,6 +75,7 @@ Comment[fr]=Configuration de la date et l'heure de KOrganizer
 Comment[ga]=Cumraíocht Ama agus Dáta le haghaidh KOrganizer
 Comment[gl]=Configuración da hora e a data do KOrganizer
 Comment[hu]=KOrganizer dátum- és időbeállítások
+Comment[ia]=Configuration de horas e datas in KOrganizer
 Comment[it]=Configurazione data e ora di KOrganizer
 Comment[ja]=KOrganizer 日付と時間の設定
 Comment[kk]=KOrganizer-дің уақыт параметрлері
