--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -38,6 +38,7 @@ Name[ga]=Amhairc
 Name[gl]=Vistas
 Name[he]=תצוגות
 Name[hu]=Nézetek
+Name[ia]=Vistas
 Name[is]=Sýn
 Name[it]=Viste
 Name[ja]=ビュー
@@ -99,6 +100,7 @@ Comment[fy]=KOrganizer werjefte ynstelle
 Comment[ga]=Cumraíocht Amhairc KOrganizer
 Comment[gl]=Configuración da vista do KOrganizer
 Comment[hu]=KOrganizer nézeti beállítások
+Comment[ia]=Configuration de vistas in KOrganizer
 Comment[is]=Stillingar KOrganizer sýna
 Comment[it]=Configurazione viste di KOrganizer
 Comment[ja]=KOrganizer ビューの設定
