--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -22,6 +22,7 @@ Name[fy]=KOrganizer omtinkerdaemon
 Name[ga]=Cliant Meabhrúchán KOrganizer
 Name[gl]=Cliente de lembranzas do KOrganizer
 Name[hu]=KOrganizer-emlékeztető kliens
+Name[ia]=Cliente pro rememoration in KOrganizer
 Name[is]=Áminningarforrit fyrir KOrganizer
 Name[it]=Client degli avvisi di KOrganizer
 Name[ja]=KOrganizer リマインダクライアント
@@ -75,6 +76,7 @@ GenericName[fy]=KOrganizer omtinkerdaemon
 GenericName[ga]=Cliant Deamhain Meabhrúchán KOrganizer
 GenericName[gl]=Cliente do Servizo de Lembranzas do KOrganizer
 GenericName[hu]=KOrganizer emlékeztető szolgáltatás kliense
+GenericName[ia]=Cliente Daemon pro rememoration in KOrganizer
 GenericName[is]=Áminningarpúki fyrir KOrganizer
 GenericName[it]=Client del demone degli avvisi di KOrganizer
 GenericName[ja]=KOrganizer リマインダデーモンクライアント
