--- a/korganizer.desktop
+++ b/korganizer.desktop
@@ -25,6 +25,7 @@ Comment[gl]=Programa de calendario e axenda
 Comment[he]=תוכניות לוח שנה ותזמון משימות
 Comment[hr]=Kalendar i rokovnik
 Comment[hu]=Határidőnapló és eseményszervező
+Comment[ia]=Programma de calendario e planification
 Comment[is]=Dagbók og skipulag
 Comment[it]=Programma di calendario e di agenda
 Comment[ja]=カレンダーとスケジュール管理プログラム
@@ -91,6 +92,7 @@ Name[gl]=KOrganizer
 Name[he]=KOrganizer
 Name[hr]=KOrganizer
 Name[hu]=KOrganizer
+Name[ia]=KOrganizer
 Name[is]=KOrganizer
 Name[it]=KOrganizer
 Name[ja]=KOrganizer
@@ -150,6 +152,7 @@ GenericName[ga]=Eagraí Pearsanta
 GenericName[gl]=Organizador persoal
 GenericName[he]=מנהל זמן אישי
 GenericName[hu]=Határidőnapló
+GenericName[ia]=Organisator personal
 GenericName[is]=Persónuleg skipulagsbók
 GenericName[it]=Organizzatore personale
 GenericName[ja]=個人向けスケジュール管理
