--- a/korganizer_part.desktop
+++ b/korganizer_part.desktop
@@ -25,6 +25,7 @@ Comment[gl]=Programa de calendario e axenda
 Comment[he]=תוכניות לוח שנה ותזמון משימות
 Comment[hr]=Kalendar i rokovnik
 Comment[hu]=Határidőnapló és eseményszervező
+Comment[ia]=Programma de calendario e planification
 Comment[is]=Dagbók og skipulag
 Comment[it]=Programma di calendario e di agenda
 Comment[ja]=カレンダーとスケジュール管理プログラム
@@ -90,6 +91,7 @@ Name[gl]=KOrganizer
 Name[he]=KOrganizer
 Name[hr]=KOrganizer
 Name[hu]=KOrganizer
+Name[ia]=KOrganizer
 Name[is]=KOrganizer
 Name[it]=KOrganizer
 Name[ja]=KOrganizer
