--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -23,6 +23,7 @@ Name[fy]=Joadske kalenderplugin
 Name[ga]=Breiseán Féilire Giúdaí
 Name[gl]=Engadido para o calendario xudeu
 Name[hu]=Bővítőmodul a zsidó naptár kezeléséhez
+Name[ia]=Plug-in pro calendario judee
 Name[is]=Gyðinga dagatalsíforrit
 Name[it]=Estensione calendario ebraico
 Name[ja]=ユダヤ歴プラグイン
@@ -71,6 +72,7 @@ Comment[fi]=Näyttää kaikki päivät KOrganizerissa myös juutalaisen kalenter
 Comment[fr]=Affiche toutes les dates de KOrganizer selon le calendrier Juif.
 Comment[gl]=Amosa todas as datas en KOrganizer tamén no sistema de calendario xudeu.
 Comment[hu]=A KOrganizer dátumait kiírja a hagyományos zsidó naptár szerint is.
+Comment[ia]=Monstra omne datas in KOrganizer anque in le systema calendari judee.
 Comment[it]=Mostra tutte le date in KOrganizer anche secondo il calendario ebraico.
 Comment[ja]=KOrganizer のすべての日付をユダヤ暦でも表示します。
 Comment[kk]=Яһуди күнтізбе күндерін KOrganizer-де көрсететін плагині.
