--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -22,6 +22,7 @@ Name[fy]=Printstyl foar journaals
 Name[ga]=Stíl Phriontála Dialainne
 Name[gl]=Estilo de Impresión do Diario
 Name[hu]=Naplónyomtatási stílus
+Name[ia]=Stilo de imprimer le jornal
 Name[is]=Dagbókarprentstíll
 Name[it]=Stile di stampa a diario
 Name[ja]=日記印刷スタイル
@@ -71,6 +72,7 @@ Comment[fr]=Ce module vous permet d'imprimer les entrées de votre journal
 Comment[ga]=Leis an mbreiseán seo is féidir leat iontrálacha dialainne a phriontáil.
 Comment[gl]=Este engadido permite imprimir as entradas do diario.
 Comment[hu]=Ez a modul naplóbejegyzések kinyomtatását teszi lehetővé.
+Comment[ia]=Iste plug-in permitte imprimer entratas del jornal (entratas de diario).
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út dagbókarfærslur.
 Comment[it]=Questa estensione ti permette di stampare le voci del diario.
 Comment[ja]=このプラグインにより、日記のエントリを印刷できるようになります。
