--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -22,6 +22,7 @@ Name[fy]=Printstyl foar listen
 Name[ga]=Priontáil mar Liosta
 Name[gl]=Estilo de Impresión das Listas
 Name[hu]=Eseménylista kinyomtatása
+Name[ia]=Lista de stilos de imprimer
 Name[is]=Listaprentstíll
 Name[it]=Stile di stampa ad elenco
 Name[ja]=リスト印刷スタイル
@@ -70,6 +71,7 @@ Comment[fi]=Tämä liitännäinen mahdollistaa tapahtumien ja tehtävien tulostu
 Comment[fr]=Ce module vous permet d'imprimer les évènements et les tâches sous forme de liste
 Comment[gl]=Este engadido permi­te imprimir os eventos e as tarefas en forma de listaxe.
 Comment[hu]=Ezzel a modullal listaként kinyomtathatók a feladatok és események.
+Comment[ia]=Iste plug-in permitte imprimer eventos e cargas a facer como listas.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista með atburðum og verkþáttum.
 Comment[it]=Questa estensione ti permette di stampare eventi e cose da fare in modalità elenco.
 Comment[ja]=このプラグインにより、リストフォーム内のイベントや To-Do を印刷できるようになります。
