--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -22,6 +22,7 @@ Name[fy]=Printstyl foar Wat komt der no
 Name[ga]=Priontáil Rudaí Le Teacht
 Name[gl]=Estilo de Impresión do Que Ven Agora
 Name[hu]=A közeljövő eseményeinek kinyomtatása
+Name[ia]=Stilo de imprimer le Que veni
 Name[is]=Hvað er næst prentstíll
 Name[it]=Stile di stampa "cosa viene dopo"
 Name[ja]=次は何？ 印刷スタイル
@@ -70,6 +71,7 @@ Comment[fi]=Tämä liitännäinen mahdollistaa tulevien tapahtumien ja tehtävie
 Comment[fr]=Ce module vous permet d'imprimer la liste des prochaines évènements et des prochaines tâches.
 Comment[gl]=Este engadido permite imprimir unha listaxe de todos os eventos e tarefas vindeiros.
 Comment[hu]=Ezzel a modullal kinyomtathatók a rövidesen aktuálissá váló feladatok és események.
+Comment[ia]=Iste plug-in permitte imprimer un lista de omne veniente eventos e cargas a facer.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista yfir alla væntanlega atburði og verkþætti.
 Comment[it]=Questa estensione ti permette di stampare una lista dei prossimi eventi e cose da fare.
 Comment[ja]=このプラグインにより、将来のすべてのイベントや To-Do のリストを印刷できるようになります。
