--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -14,6 +14,7 @@ Name[fr]=Interface de composant KOrganizer
 Name[ga]=Comhéadan Comhpháirte KOrganizer
 Name[gl]=Interface da Parte KOrganizer
 Name[hu]=KOrganizer objektumfelület
+Name[ia]=Interfacie pro parte de KOrganizer
 Name[it]=Interfaccia del componente di KOrganizer
 Name[ja]=KOrganizer コンポーネントのインターフェース
 Name[kk]=KOrganizer бөлшегінің интерфейсі
@@ -66,6 +67,7 @@ Comment[gl]=Parte KOrganizer
 Comment[he]=רכיב KOrganizer
 Comment[hr]=KOrganizer komponenta
 Comment[hu]=KOrganizer objektum
+Comment[ia]=Parte pro KOrganizer
 Comment[is]=KOrganizer hluti
 Comment[it]=Componente di KOrganizer
 Comment[ja]=KOrganizer コンポーネント
