--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -35,6 +35,7 @@ Name[fy]=Groepsplanning
 Name[ga]=Sceidealadh Grúpa
 Name[gl]=Organización de grupo
 Name[hu]=Szervezés
+Name[ia]=Horario de gruppo
 Name[is]=Hópáætlun
 Name[it]=Programmazione gruppi
 Name[ja]=グループスケジューリング
@@ -90,6 +91,7 @@ Comment[fy]=KOrganizer groepsplanning ynstelle
 Comment[ga]=Cumraíocht Sceidealta Grúpa KOrganizer
 Comment[gl]=Configuración da Axenda de Grupo de KOrganizer
 Comment[hu]=KOrganizer szervezési beállítások
+Comment[ia]=Configuration KOrganizer de horario de gruppo
 Comment[is]=Stillingar fyrir KOrganizer hópáætlun
 Comment[it]=Configurazione del programmatore gruppi di KOrganizer
 Comment[ja]=KOrganizer グループスケジューリングの設定
