--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -22,6 +22,7 @@ Name[fy]=Datumgetallenplugin foar aginda's
 Name[gl]=Engadido para os números dos dí­as nos calendarios
 Name[he]=תוסף מספרי תאריכים ללוחות שנה
 Name[hu]=Dátumkezelő bővítőmodul naptárakhoz
+Name[ia]=Plug-in pro numero del die de calendarios
 Name[is]=Íforrit fyrir númer dags á dagatali
 Name[it]=Estensione data ordinale per i calendari
 Name[ja]=日数表示プラグイン
@@ -71,6 +72,7 @@ Comment[fi]=Tämä liitännäinen näyttää jokaisen päivän järjestysnumeron
 Comment[fr]=Pour chaque jour, ce module montre le numéro du jour en haut de la vue agenda. Par exemple, le 1er février est le 32ème jour de l'année.
 Comment[gl]=Este engadido amosa o dí­a do ano na vista superior da axenda. Por exemplo, o 1 de febreiro é o dí­a 32 do ano.
 Comment[hu]=Megjeleníti az év elejétől eltelt napok számát az áttekintő nézet tetején. Például február elseje az év 32. napja.
+Comment[ia]=Pro cata die, iste plug-in monstra le numero del die in le anno al summitate del vista de agenda. Per exemplo, le 1 de februario es die 32 del anno.
 Comment[is]=Þetta íforrit sýnir efst í fundarskránni númer hvers dags í árinu. T.d. er 1. febrúar 32. dagurinn í árinu.
 Comment[it]=Per ciascun giorno, questa estensione mostra il valore del giorno per la data ordinale (numero progressivo a partire dal primo gennaio dell'anno corrente). Per esempio al primo di febbraio corrisponde il numero 32.
 Comment[ja]=このプラグインは予定表ビューの上に、それぞれの日がその年の何日目であるかを表示します。例えば、2月1日はその年の32日目です。
