--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -17,6 +17,7 @@ Name[fi]=Wikipedian päivän kuva -liitännäinen
 Name[fr]=Module externe « Image du jour » de Wikipédia
 Name[gl]=Engadido para a Imaxe do Dí­a da Wikipedia nos Calendarios
 Name[hu]=Naptárbővítmény a Wikipedia "A nap képe" funkciójához
+Name[ia]=Plug-in del pictura del die de Wikipedia pro calendarios
 Name[it]=Estensione "foto del giorno" di Wikipedia per i calendari
 Name[ja]=Wikipedia 今日の写真プラグイン
 Name[kk]=Күнтізбенің Уикипедиядағы "Тәулік суреті" плагині
@@ -56,6 +57,7 @@ Comment[et]=See plugin näitab Wikipedia päevapilti
 Comment[fr]=Ce module externe fournit l'image du jour de Wikipédia
 Comment[gl]=Este engadido fornece a Imaxe do Dí­a da Wikipedia
 Comment[hu]=Ez a bővítmény kezelni tudja a Wikipedia "A nap képe" szolgáltatását
+Comment[ia]=Iste plug-in provide le pictura del die de Wikipedia
 Comment[it]=Questa estensione fornisce la "foto del giorno" di Wikipedia
 Comment[ja]=Wikipedia の「今日の写真」を提供します。
 Comment[kk]=Бұл плагині Уикипедиядағы "Тәулік суреті" дегенді алып береді
