--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -21,6 +21,7 @@ Name[fy]=Printstyl foar jierkalinder
 Name[ga]=Stíl Bhliantúil Phriontála
 Name[gl]=Estilo de Impresión Anual
 Name[hu]=Éves naptár nyomtatási stílus
+Name[ia]=Stilo de imprimer un anno
 Name[it]=Stile di stampa annuale
 Name[ja]=年単位印刷スタイル
 Name[kk]=Жылдықты басу стилі
@@ -65,6 +66,7 @@ Comment[fr]=Ce module vous permet d'imprimer l'ensemble de l'année
 Comment[fy]=Comment=Dizze plugin makket it mooglik om in jierkalinder Ãºt te printsjen.
 Comment[gl]=Este engadido permite imprimir un calendario anual.
 Comment[hu]=Ez a modul egy egész éves naptár kinyomtatását teszi lehetővé.
+Comment[ia]=Iste plug-in permitte imprimer un calendario annual.
 Comment[it]=Questa estensione ti permette di stampare un calendario annuale.
 Comment[ja]=このプラグインにより、年単位のカレンダーを印刷できるようになります。
 Comment[kk]=Бұл жылдық күнтізбені басып шығаратын плагині.
