--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -15,6 +15,7 @@ Name[fi]=Wikipedian "Tämä päivä historiassa" -liitännäinen
 Name[fr]=Module externe « Ce jour dans l'histoire » d'après Wikipédia
 Name[gl]=Engadido "Este Dí­a na Historia" da Wikipedia
 Name[hu]=Wikipedia-bővítmény - "Történelmi események ezen a napon"
+Name[ia]=Plug-in pro 'Iste die in le historia' de Wikipedia
 Name[it]=Estensione "Questo giorno nella storia" di Wikipedia
 Name[ja]=Wikipedia 今日は何の日プラグイン
 Name[kk]=Wikipedia-дағы 'Бұл күн тарихта' плагині
@@ -52,6 +53,7 @@ Comment[et]=See plugin näitab Wikipedia 'täna ajaloos' lehekülgi
 Comment[fr]=Ce module externe fournit un lien vers la page « Ce jour dans l'histoire » de Wikipédia
 Comment[gl]=Este engadido fornece ligazóns ás páxinas "Este Dí­a na Historia" da Wikipedia
 Comment[hu]=Ez a bővítmény hozzáférést biztosít a Wikipedia "Történelmi események ezen a napon" oldalához
+Comment[ia]=Iste plug-in provide ligamines al paginas de Wikipedia super 'Iste die in le historia'
 Comment[it]=Questa estensione fornisce la pagina "Questo giorno nella storia" di Wikipedia
 Comment[ja]=Wikipedia の「今日は何の日」へのリンクを提供します。
 Comment[kk]=Бл плагині Wikipedia-дағы 'Бұл күн тарихта' мәліметіне  қол жеткізеді
