SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/korganizer/; revision=1202233

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -1,6 +1,8 @@
 [Desktop Entry]
 Name=Reminder Daemon
+Name[x-test]=xxReminder Daemonxx
 Comment=Event and task reminder daemon
+Comment[x-test]=xxEvent and task reminder daemonxx
 Icon=korgac
 Type=AkonadiAgent
 Exec=korgac
